--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.datasource.url=jdbc:mysql://localhost:3306/istoe_jf
 spring.datasource.username=root
 spring.datasource.password=root
 
