--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/istoe_jf
+spring.datasource.url=jdbc:mysql://localhost:3306/istoe
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 ## DataSource settings: set here your own configurations for the database 
 ## connection. In this example we have "netgloo_blog" as database name and 
