--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<version>2.1.3.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.puc</groupId> 
+	<groupId>com.puc</groupId>
 	<artifactId>istoe</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>istoe</name>
@@ -34,7 +34,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency> 
+		</dependency>
 
 		<!-- starter-web para incluir tomcat -->
 		<dependency>
@@ -63,10 +63,9 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.6</version>
-			<scope>provided</scope>
+			<version>1.16.18</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
-		<!--  -->
+		<!-- -->
 	</dependencies>
 
 	<build>
